# The-Achievers_SKB-07_SKB-P2

./: .gitignore  README.md  requirements.txt
App/: pubspec.yaml
App/android/app/src/main/: AndroidManifest.xml
App/assets/data/: disease_protocols.json  equipment.csv  livestock.csv  medicines.csv  prices.csv
App/lib/: main.dart
App/lib/l10n/: app_en.arb  app_hi.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_hi.dart  app_localizations_mr.dart  app_mr.arb
App/lib/providers/: language_provider.dart
App/lib/screens/: login_screen.dart  main_shell_screen.dart  recommendation_screen.dart  role_selection_screen.dart  signup_screen.dart
App/lib/screens/views/: home_view.dart  marketplace_view.dart  more_view.dart  prices_view.dart  scanner_view.dart  vet_dashboard_view.dart
App/macos/Flutter/: GeneratedPluginRegistrant.swift
App/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
Frontend/Website Dev/: next.config.ts  package.json
Frontend/Website Dev/src/app/: globals.css  layout.tsx  page.tsx
Frontend/Website Dev/src/app/Dashboard/: page.tsx
Frontend/Website Dev/src/app/login/: page.tsx
Frontend/Website Dev/src/app/signup/: page.tsx
Frontend/Website Dev/src/components/: FleetNavTabs.tsx  Header.tsx  Sidebar.tsx
Frontend/Website Dev/src/components/diagnose/: DiagnosisResult.tsx  (+2 more)
Frontend/Website Dev/src/context/: DiagnosisContext.tsx
Frontend/Website Dev/src/fleet/: ActiveRentalsView.tsx  AvailableAssetsView.tsx
Model/online/: gemini_client.py  intelligence_engine.py  main.py  pyproject.toml
(+10 files in other folders)
