[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agrisense-backend"
version = "0.1.0"
description = "AgriSense Python backend and model services"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
dependencies = { file = ["../../requirements.txt"] }
